# budgetizer

backend/: Dockerfile  alembic.ini  docker-compose.yml  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 515c705df387_make_models_unique_by_name.py  52fa625b02a8_.py
backend/api/: dependencies.py  security.py
backend/api/v1/: api.py
backend/api/v1/endpoints/: auth.py  expense.py  expense_categories.py  product.py  shop.py  user.py
backend/crud/: expense.py  expense_category.py  expense_item.py  product.py  shop.py  user.py
backend/db/: db.py
backend/models/: __init__.py  expense.py  product.py  shop.py  user.py
backend/schemas/: expense.py  expense_category.py  expense_item.py  product.py  shop.py  user.py
